@@ -63,6 +63,8 @@ Changes in Bitbake 1.9.x:
 	- Handle paths in svn fetcher module parameter
 	- Support the syntax "export VARIABLE"
 	- Add bzr fetcher
+	- Add support for cleaning directories before a task in the form:
+	  do_taskname[cleandirs] = "dir"
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
